updated to fix the problem with some text being too small to read

--- a/static/scss/components/general/general.scss
+++ b/static/scss/components/general/general.scss
@@ -1,6 +1,6 @@
-.jumbotron p{
+.jumbotron p {
+  font-size: 15px;
+  @include mobile {
     font-size: 15px;
-    @include mobile{
-       font-size: 10px;
-      }
+  }
 }
